welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: not found: value marquer
marquer();
^Source:4: error: not found: value marquer
marquer();
^Source:6: error: not found: value marquer
marquer();
^Source:8: error: not found: value marquer
marquer();
^Source:10: error: not found: value marquer
marquer();
^Source:12: error: not found: value marquer
marquer();recule();
^Source:13: error: not found: value marquer
marquer();recule();
^Source:14: error: not found: value marquer
marquer();recule();
^Source:15: error: not found: value marquer
marquer();droite();
^Source:16: error: not found: value marquer
marquer();droite();
^Source:17: error: not found: value marquer
marquer();droite();
^Source:18: error: not found: value marquer
marquer();droite();
^Source:19: error: not found: value marquer
marquer();avance();
^Source:20: error: not found: value marquer
marquer();avance();
^Source:21: error: not found: value marquer
marquer();gauche();
^Source:22: error: not found: value marquer
marquer();
^