welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
marquer();
gauche();
marquer();
gauche();
marquer();
gauche();
marquer();
gauche();
marquer();
recule();
marquer();recule();
marquer();recule();
marquer();recule();
marquer();droite();
marquer();droite();
marquer();droite();
marquer();droite();
marquer();avance();
marquer();avance();
marquer();gauche();
marquer();

